--- a/index.html
+++ b/index.html
@@ -43,7 +43,14 @@
 
     <div class="flavour"></div>
     <div class="flavour2"></div>
+    <div class="modal flex">
+        <div class="modal-content">
+            <div class="modal-text"> </div>
+            <p><button class="modal-button">Play again</button> </p>
+        </div>
 
+    </div>
+    
     <script src="script2.js">  </script>
 
 </body>
