modal box update and game stop at 5

--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     <div class="flavour"></div>
     <div class="flavour2"></div>
     <div class="modal flex">
+        <div class="outside"></div>
         <div class="modal-content">
             <div class="modal-text"> </div>
             <p><button class="modal-button">Play again</button> </p>
