some title change

--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <p class="play_game">Let's play a game...</p>
-    <h1>Rock, Paper, Scissors</h1>
-    <h3> "You vs. The guy she told you not to worry about" Edition</h3>
+    <div class="title h1">Rock, Paper, Scissors</div>
+    <div class="title h3"> "You vs. The guy she told you not to worry about" Edition</div>
     <div class="image-container">
 
         <div class="rock button" id="Rock">
